table: fix scrolling on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -43,8 +43,22 @@ h2 .population {
     max-width: 100%;
 }
 
-#dataTable table {
+#dataTable {
     width: 100%;
+    overflow-y: auto;
+    margin: 0 0 1em;
+}
+
+#dataTable::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 14px;
+    height: 14px;
+}
+
+#dataTable::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 3px solid #fff;
+    background-color: rgba(0, 0, 0, .3);
 }
 
 #dataTable .index_name {
